--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
-langchain>=0.2.0
-langchain-openai
+langchain==1.0.0
+langchain-community>=0.2.3
+langchain-openai>=0.1.8
+langchain-chroma>=1.0.0
+chromadb>=0.5.0
+openai>=1.56.1
 pydantic>=2.0
 pydantic-settings>=2.0
 PyYAML>=6.0
