--- a/.dockerignore
+++ b/.dockerignore
@@ -1,3 +1,19 @@
+# Version control
 .git
+.gitignore
+
+# Environments and secrets
 .env
+.venv/
+
+# Python cache and compiled files
+__pycache__/
+*.pyc
+
+# Local or generated content
+chroma/
+*.log
+
+# Temporary or personal files
 TODO.md
+document.txt
