--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 langchain==1.0.0
-langchain-community>=0.2.3
-langchain-openai>=0.1.8
-langchain-chroma>=1.0.0
-chromadb>=0.5.0
-openai>=1.56.1
-pydantic>=2.0
-pydantic-settings>=2.0
-PyYAML>=6.0
-pytest
+langchain-community==0.4.1
+langchain-openai==1.0.2
+langchain-chroma==1.0.0
+chromadb==1.3.3
+openai==2.7.1
+pydantic==2.12.4
+pydantic-settings==2.11.0
+PyYAML==6.0.3
+pytest==8.4.2
